--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sas-backend",
+  "name": "expertrons",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,24 +10,24 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kunjshah45/sas-backend.git"
+    "url": "git+https://github.com/kunjshah45/expertrons"
   },
   "keywords": [
     "society"
   ],
-  "author": "Nibodh",
+  "author": "Kunj Shah",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/kunjshah45/sas-backend/issues"
+    "url": "https://github.com/kunjshah45/expertrons/issues"
   },
-  "homepage": "https://github.com/kunjshah45/sas-backend#readme",
+  "homepage": "https://github.com/kunjshah45/expertrons#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "json-sql-builder2": "^1.0.24",
-    "nodemon": "^2.0.4",
-    "nunjucks": "^3.2.1",
-    "pg": "^8.3.0"
+    "mongodb": "^3.6.3",
+    "mongoose": "^5.10.15",
+    "nodemon": "^2.0.4"
   }
 }
